[Modify] Fixed clipping issue
-Fixed clipping issue in the aside part

--- a/03-zozor/style.css
+++ b/03-zozor/style.css
@@ -189,9 +189,9 @@ nav a:hover {
 /* Body */
 section {
     display: grid;
-    grid-template-columns: 70vw 25vw;
+    grid-template-columns: 3fr 1fr;
     /* justify-content: center; */
-    background-color: #1f1f24;
+    background-color: white;
     /* border: 1px solid transparent; */
     width: 100vw;
     height: 70vh;
@@ -207,7 +207,6 @@ aside {
 }
 
 article {
-    background-color: white;
     overflow: auto;
     /* width: 75vw; */
     margin-right: 1vw;
@@ -264,11 +263,9 @@ aside {
     overflow: hidden;
     background-color: #1f1f24;
     /* box-shadow: 0px 2px 5px #1c1a19; */
-    margin-left: 0vw;
-    padding: 20rem;
-    width: 25vw;
+    padding: 1rem 3rem 1rem 2rem;
+    /* width: 23vw; */
     border-radius: 2px;
-    padding: 10px;
     color: white;
     font-size: 1em;
 }
@@ -405,13 +402,19 @@ footer h1 {
         margin: 0;
     }
     aside{
-        padding: 1rem;
+        padding: 0.5rem;
         width: 95vw;
         /* height: 50vh; */
     }
 
     #return{
         margin: 1rem 0 0 1.25rem;
+        font-size: 1rem;
+    }
+}
+
+@media only screen and (max-width:375px){
+    aside{
         font-size: 1rem;
     }
 }
